--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="content">
         <h1 class="title">About</h1>
         <div class="about-content">
-            <img src="images/me2.jpg" class="my-img">
+            <img src="me2.jpg" class="my-img">
             <p>
                 I am passionate about technology, education, leadership and people. <br>
                 I work in cyber security trying to design better ways to engage everyday folk to understand and take command of their online safety.<br>
