--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h3 class="sub-logo">Penetration Tester, Digital forensics investigator</h3>
         <nav class="navbar">
             <a href="#">About</a>
-            <a href="#">Sec Consult</a>
+            <a href="#">Consult</a>
             <a href="#">Project</a>
             <a href="#">Blog</a>
         </nav>
